--- a/main.html
+++ b/main.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<head><title>USERWEB</title></head>
-    
-<body>
-    <h1></h1>path #1: </h1>
-    <a href="path1.html" target=_self title="Go to path 2">
-        Click here
-    </a>
-</body>
+    <head>
+        <title>USERWEB</title>
+    </head>    
+    <body>
+        <h1></h1>path #1: </h1>
+        <a href="path1.html" target=_self title="Go to path 2">Click here</a>
+    </body>
+</html>
