--- a/path1.html
+++ b/path1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<head><title>PATH2</title></head>
-<body>
-    <h1>CURRENTLY IN PATH1</h1>
-</body>
+    <head><title>PATH2</title></head>
+    <body>
+        <h1>CURRENTLY IN PATH1</h1>
+    </body>
+</html>
